# pdf-to-markdown-copilot-converter

./: .gitignore  Agents.md  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
audit/: log.json
docs/: design.md
src/: ai_formatter.py  audit_logger.py  cross_page_merger.py  input_source.py  main.py  markdown_writer.py  pdf_processor.py  tracer.py
src/providers/: chatgpt.py  copilot.py  gemini.py
tests/: test_ai_formatter.py  test_audit_logger.py  test_cross_page_merger.py  test_markdown_writer.py  test_pdf_processor.py  test_tracer.py
